--- a/index.html
+++ b/index.html
@@ -44,5 +44,249 @@
         </div>
     </div>
 </section>
+
+<section class="car">
+    <div class="container">
+        <h2 class="sub-title">Наш автопарк</h2>
+        <div class="car-items">
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="./images/1.png" alt="Image 1">
+                </div>
+                <div class="car-item-title">Lamborghini Huracan Spyder</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="./images/transmission.png" alt="transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>5.2 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/year.png" alt="year">
+                        <div>Год выпуска</div>
+                        <div>2019</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="./images/2.png" alt="Image 2">
+                </div>
+                <div class="car-item-title">Chevrolet Corvette</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="./images/transmission.png" alt="transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>6.2 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/year.png" alt="year">
+                        <div>Год выпуска</div>
+                        <div>2017</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="./images/3.png" alt="Image 3">
+                </div>
+                <div class="car-item-title">Ferrari California</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="./images/transmission.png" alt="transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>3.9 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/year.png" alt="year">
+                        <div>Год выпуска</div>
+                        <div>2010</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="./images/4.png" alt="Image 4">
+                </div>
+                <div class="car-item-title">Lamborghini Urus</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="./images/transmission.png" alt="transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>4.0 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/year.png" alt="year">
+                        <div>Год выпуска</div>
+                        <div>2019</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="./images/5.png" alt="Image 5">
+                </div>
+                <div class="car-item-title">Audi R8</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="./images/transmission.png" alt="transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>5.2 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/year.png" alt="year">
+                        <div>Год выпуска</div>
+                        <div>2018</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="./images/6.png" alt="Image 6">
+                </div>
+                <div class="car-item-title">Chevrolet Camaro</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="./images/transmission.png" alt="transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>2.0 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/year.png" alt="year">
+                        <div>Год выпуска</div>
+                        <div>2019</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="./images/7.png" alt="Image 7">
+                </div>
+                <div class="car-item-title">Maserati Quattroporte</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="./images/transmission.png" alt="transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>3.0 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/year.png" alt="year">
+                        <div>Год выпуска</div>
+                        <div>2018</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="./images/8.png" alt="Image 8">
+                </div>
+                <div class="car-item-title">Dodge Challenger</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="./images/transmission.png" alt="transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>6.4 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/year.png" alt="year">
+                        <div>Год выпуска</div>
+                        <div>2019</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+            <div class="car-item">
+                <div class="car-item-image">
+                    <img src="./images/9.png" alt="Image 9">
+                </div>
+                <div class="car-item-title">Nissan GT-R</div>
+                <div class="car-item-info">
+                    <div class="car-item-point">
+                        <img src="./images/transmission.png" alt="transmission">
+                        <div>Коробка</div>
+                        <div>автомат</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/wheel.png" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>3.8 л.с.</div>
+                    </div>
+                    <div class="car-item-point">
+                        <img src="./images/year.png" alt="year">
+                        <div>Год выпуска</div>
+                        <div>2019</div>
+                    </div>
+                </div>
+                <div class="car-item-action">
+                    <button class="button">Забронировать</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+</section>
 </body>
 </html>
