--- a/index.html
+++ b/index.html
@@ -288,5 +288,21 @@
     </div>
     </div>
 </section>
+
+<section class="price">
+    <div class="container">
+        <h2 class="sub-title">Узнать цену и забронировать</h2>
+        <div class="price-text">
+            Заполните данные, и мы перезвоним вам для уточнения всех деталей бронирования
+        </div>
+        <form action="" class="price-form">
+            <input type="text" class="price-input" placeholder="Ваше имя">
+            <input type="text" class="price-input" placeholder="Ваш телефон">
+            <input type="text" class="price-input" placeholder="Автомобиль, который вас интересует">
+            <button class="button">Узнать цену</button>
+        </form>
+        <img src="./images/rolls.png" alt="rolls" class="price-image">
+    </div>
+</section>
 </body>
 </html>
