--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <a href="#">Главное</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#">Автомобили</a>
+                    <a href="#cars">Автомобили</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#">Бронирование авто</a>
+                    <a href="#price">Бронирование авто</a>
                 </li>
             </ul>
         </nav>
@@ -45,7 +45,7 @@
     </div>
 </section>
 
-<section class="car">
+<section class="car" id="cars">
     <div class="container">
         <h2 class="sub-title">Наш автопарк</h2>
         <div class="car-items">
@@ -289,7 +289,7 @@
     </div>
 </section>
 
-<section class="price">
+<section class="price" id="price">
     <div class="container">
         <h2 class="sub-title">Узнать цену и забронировать</h2>
         <div class="price-text">
@@ -304,5 +304,14 @@
         <img src="./images/rolls.png" alt="rolls" class="price-image">
     </div>
 </section>
+
+<footer class="footer">
+    <div class="container">
+        <div class="logo">
+            <img src="./images/logo.png" alt="Logo">
+        </div>
+        <div class="rights">Все права защищены</div>
+    </div>
+</footer>
 </body>
 </html>
