--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 трассы!
             </div>
             <div class="main-action">
-                <button class="button">Посмотреть автомобили</button>
+                <button class="button" id="main-action">Посмотреть автомобили</button>
             </div>
         </div>
     </div>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
             <div class="car-item">
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
             <div class="car-item">
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
             <div class="car-item">
@@ -150,7 +150,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
             <div class="car-item">
@@ -176,7 +176,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
             <div class="car-item">
@@ -202,7 +202,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
             <div class="car-item">
@@ -228,7 +228,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
             <div class="car-item">
@@ -254,7 +254,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
             <div class="car-item">
@@ -280,7 +280,7 @@
                     </div>
                 </div>
                 <div class="car-item-action">
-                    <button class="button">Забронировать</button>
+                    <button class="button car-button">Забронировать</button>
                 </div>
             </div>
         </div>
@@ -294,10 +294,10 @@
             Заполните данные, и мы перезвоним вам для уточнения всех деталей бронирования
         </div>
         <form action="" class="price-form">
-            <input type="text" class="price-input" placeholder="Ваше имя">
-            <input type="text" class="price-input" placeholder="Ваш телефон">
-            <input type="text" class="price-input" placeholder="Автомобиль, который вас интересует">
-            <button class="button">Узнать цену</button>
+            <input type="text" class="price-input" id="name" placeholder="Ваше имя">
+            <input type="text" class="price-input" id="phone" placeholder="Ваш телефон">
+            <input type="text" class="price-input" id="car" placeholder="Автомобиль, который вас интересует">
+            <button class="button" type="button" id="price-action">Узнать цену</button>
         </form>
         <img src="./images/rolls.png" alt="rolls" class="price-image">
     </div>
@@ -311,5 +311,6 @@
         <div class="rights">Все права защищены</div>
     </div>
 </footer>
+<script src="./scripts/script.js"></script>
 </body>
 </html>
